static/css/custom.css
/* MISC
============================================================================= */

.quire-contributors-list.bio #Timothy-Potts {
  display: none;
}

.quire-contributor a {
  color: #333;
}
.quire-contributor a:hover {
  color: #7a3227;
}
@media print {
  .quire-contributor a {
    color: #000;
  }
}

.quire-splash .quire-page__header .hero-body .quire-page__header__title {
  color: #b44a3a;
}

.quire-page h2 {
  text-transform: none;
}
@@media print {
  .quire-page h2 {
    print: #363636;
  }
}

.quire-page__content .content .footnote-ref a {
  font-weight: normal;
  margin-right: .2em;
}

.content figure .quire-figure__caption {
  min-height: 1rem;
}

.quire-splash p:first-child:first-letter {
  margin-right: .5rem; 
}

@media print {
  .title-page .title-tp {
    max-width: 3.75in;
    float: right;
  }
  .title-page .sub-title {
    clear: both;
  }
}


/* COVER
============================================================================= */

/* Custom cover slideshow animation */
.quire-cover__overlay {
  height: calc((95vh - 3rem) * .5);
  min-height: calc((95vh - 3rem) * .5);
  width: 50vw;
}
.quire-cover__overlay img {
  max-height: 100%;
  width: 100%;
  object-fit: cover;
  position:absolute;
  left:0;
  transition: opacity 1s ease-in-out;
  animation-name: FadeInOut;
  animation-timing-function: ease-in-out;
  animation-iteration-count: infinite;
  animation-duration: 16s;
}
.quire-cover__overlay img {
  object-fit: none;
}
.quire-cover__overlay.upper-left img {
  object-position: bottom right;
}
.quire-cover__overlay.upper-right {
  left: 50%;
}
.quire-cover__overlay.upper-right img {
  object-position: bottom left;
}
.quire-cover__overlay.lower-left {
  top: 50%;
}
.quire-cover__overlay.lower-left img {
  object-position: top right;
}
.quire-cover__overlay.lower-right {
  left: 50%;
  top: 50%;
}
.quire-cover__overlay.lower-right img {
  object-position: top left;
}
@keyframes FadeInOut {
  0% {
    opacity:1;
  }
  17% {
    opacity:1;
  }
  25% {
    opacity:0;
  }
  92% {
    opacity:0;
  }
  100% {
    opacity:1;
  }
}
.quire-cover__overlay.upper-left img:nth-of-type(1) {
  animation-name: none;
}
.quire-cover__overlay.upper-left img:nth-of-type(2) {
  animation-delay: 8s;
}
.quire-cover__overlay.upper-left img:nth-of-type(3) {
  animation-delay: 6s;
}
.quire-cover__overlay.upper-left img:nth-of-type(4) {
  animation-delay: 4s;
}
.quire-cover__overlay.upper-left img:nth-of-type(5) {
  animation-delay: 2s;
}
.quire-cover__overlay.upper-left img:nth-of-type(6) {
  animation-delay: 0;
}

.quire-cover__overlay.upper-right img:nth-of-type(1) {
  animation-name: none;
}
.quire-cover__overlay.upper-right img:nth-of-type(2) {
  animation-delay: 10s;
}
.quire-cover__overlay.upper-right img:nth-of-type(3) {
  animation-delay: 8s;
}
.quire-cover__overlay.upper-right img:nth-of-type(4) {
  animation-delay: 6s;
}
.quire-cover__overlay.upper-right img:nth-of-type(5) {
  animation-delay: 4s;
}
.quire-cover__overlay.upper-right img:nth-of-type(6) {
  animation-delay: 2s;
}

.quire-cover__overlay.lower-right img:nth-of-type(1) {
  animation-name: none;
}
.quire-cover__overlay.lower-right img:nth-of-type(2) {
  animation-delay: 12s;
}
.quire-cover__overlay.lower-right img:nth-of-type(3) {
  animation-delay: 10s;
}
.quire-cover__overlay.lower-right img:nth-of-type(4) {
  animation-delay: 8s;
}
.quire-cover__overlay.lower-right img:nth-of-type(5) {
  animation-delay: 6s;
}
.quire-cover__overlay.lower-right img:nth-of-type(6) {
  animation-delay: 4s;
}

.quire-cover__overlay.lower-left img:nth-of-type(1) {
  animation-name: none;
}
.quire-cover__overlay.lower-left img:nth-of-type(2) {
  animation-delay: 14s;
}
.quire-cover__overlay.lower-left img:nth-of-type(3) {
  animation-delay: 12s;
}
.quire-cover__overlay.lower-left img:nth-of-type(4) {
  animation-delay: 10s;
}
.quire-cover__overlay.lower-left img:nth-of-type(5) {
  animation-delay: 8s;
}
.quire-cover__overlay.lower-left img:nth-of-type(6) {
  animation-delay: 6s;
}
.hero-body .container.is-fluid {
  background-color: #b44a3a;
}
.quire-cover__hero .title,
.quire-cover__hero .contributor {
  font-family: "Noto Sans", sans-serif;
  font-weight: normal;
  letter-spacing: 0;
}
.quire-cover__hero .contributor {
  margin-top: 1.5rem;
}

@media screen and (max-width: 689px){
  .quire-cover__overlay {
    width: 100%;
  }
  .quire-cover__overlay.upper-left,
  .quire-cover__overlay.lower-left {
    left: -50vw;
  }
  .hero-body .container.is-fluid {
    bottom: 0%;
  }
}

/* COPYRIGHT PAGE
============================================================================= */

@media print {
  #copyright .quire-page.quire-page--frontmatter {
    page: no-footer;
  }
  #copyright .quire-page__header {
    display: none;
  }
  #copyright .quire-page__content {
    column-count: 2;
    column-gap: .1875in;
    column-fill: auto;
    max-width: 100%;
    height: 100%;
    margin: 0;
    text-align: left;
  }
  #copyright img {
    height: .25in;
  }
}

/* Styling for Ancient Worlds Now logo and tagline */
.awn-logo {
  max-width: 300px;
  margin-top: 6rem;
}
@media print {
  #copyright img[alt="awn-logo"] {
    height: 1.325in;
    position: fixed;
    bottom: 0;
    left: 0;
  }
}
  
/* GLOSSARY
============================================================================= */
.content ul.quire-glossary__key {
  margin-left: 0;
  text-align: center;
  display: table;
  margin-bottom: 2rem;
}
.quire-page__content .container .content ul.quire-glossary__key li::before {
  content: "";
}
.quire-page__content .container .content ul.quire-glossary__key li {
  margin: .5rem .75rem;
  display: inline-block;
}
.quire-page__content .content dl.quire-glossary {
  margin: 2rem 0;
}
.quire-page__content .content dl.quire-glossary dt {
  display: inline;
}
.quire-page__content .content dl.quire-glossary dd {
  display: inline;
}
.quire-page__content .content dl.quire-glossary dd::after {
  content: " ";
  display: block;
  margin-bottom: 1rem;
}
/* ... */

